--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <div class="ad-container" id="adContainer">
     <div class="ad-content">
       <video id="adVideo" width="400" controls autoplay>
-        <source src="your-ad-video.mp4" type="video/mp4">
+        <source src="your-ad-video.mp4.mp4" type="video/mp4">
         เบราว์เซอร์ของคุณไม่รองรับการเล่นวิดีโอ
       </video>
 
