--- a/index.html
+++ b/index.html
@@ -1,75 +1,108 @@
 <!DOCTYPE html>
 <html lang="th">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>โฆษณาวิดีโอ</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>โฆษณา</title>
   <style>
+    body {
+      margin: 0;
+      padding: 0;
+    }
+
     .ad-container {
       position: fixed;
       top: 0;
       left: 0;
       width: 100%;
       height: 100%;
-      background-color: rgba(0, 0, 0, 0.7);
+      background-color: rgba(0,0,0,0.8);
       display: flex;
       justify-content: center;
       align-items: center;
-      z-index: 1000;
+      z-index: 9999;
     }
+
     .ad-content {
-      background-color: #fff;
-      padding: 20px;
-      border-radius: 10px;
-      text-align: center;
-    }
-    .ad-content video {
-      max-width: 100%;
-      height: auto;
-    }
-    .close-btn {
-      background-color: red;
-      color: white;
+      position: relative;
+      background: #000;
       padding: 10px;
+      border-radius: 10px;
+    }
+
+    video {
+      width: 100%;
+      height: auto;
+      border-radius: 10px;
+      pointer-events: none; /* ป้องกันคลิกวิดีโอ */
+      user-select: none;
+    }
+
+    .countdown {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      background: rgba(0,0,0,0.6);
+      color: #fff;
+      padding: 5px 10px;
+      border-radius: 20px;
+      font-weight: bold;
+      font-size: 16px;
+    }
+
+    .skip-btn {
+      margin-top: 15px;
+      padding: 10px 20px;
+      background-color: red;
+      color: #fff;
       border: none;
       border-radius: 5px;
+      font-size: 16px;
       cursor: pointer;
-      margin-top: 10px;
     }
-    .countdown {
-      font-size: 20px;
-      font-weight: bold;
-      margin-top: 10px;
-      color: #000;
+
+    /* ป้องกันคลิกขวา */
+    body {
+      -webkit-touch-callout: none;
+      -webkit-user-select: none;
+      -khtml-user-select: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+      user-select: none;
     }
   </style>
 </head>
-<body>
+<body oncontextmenu="return false;"> <!-- ป้องกันคลิกขวา -->
 
   <div class="ad-container" id="adContainer">
     <div class="ad-content">
-      <video id="adVideo" width="400" controls autoplay>
+      <div class="countdown" id="countdown">ข้ามใน 5 วินาที</div>
+      
+      <video id="adVideo" autoplay muted playsinline>
         <source src="your-ad-video.mp4.mp4" type="video/mp4">
-        เบราว์เซอร์ของคุณไม่รองรับการเล่นวิดีโอ
+        โฆษณาของคุณไม่สามารถเล่นได้
       </video>
-
-      <p class="countdown" id="countdown">ข้ามใน 5 วินาที</p>
-
-      <button class="close-btn" onclick="closeAd()">ข้ามโฆษณา</button>
+      
+      <div style="text-align: center;">
+        <button class="skip-btn" id="skipBtn" onclick="closeAd()" disabled>ข้ามโฆษณา</button>
+      </div>
     </div>
   </div>
 
   <script>
-    let countdownTime = 5;
-    const countdownDisplay = document.getElementById('countdown');
+    let timeLeft = 5;
+    const countdown = document.getElementById('countdown');
+    const skipBtn = document.getElementById('skipBtn');
 
-    const countdownInterval = setInterval(() => {
-      countdownDisplay.textContent = 'ข้ามใน ' + countdownTime + ' วินาที';
-      countdownTime--;
-
-      if (countdownTime < 0) {
-        clearInterval(countdownInterval);
-        closeAd();
+    const timer = setInterval(() => {
+      timeLeft--;
+      if (timeLeft > 0) {
+        countdown.textContent = 'ข้ามใน ' + timeLeft + ' วินาที';
+      } else {
+        clearInterval(timer);
+        countdown.style.display = 'none';
+        skipBtn.disabled = false;
+        skipBtn.textContent = 'ข้ามโฆษณา';
       }
     }, 1000);
 
@@ -77,6 +110,5 @@
       document.getElementById('adContainer').style.display = 'none';
     }
   </script>
-
 </body>
 </html>
