--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     body {
       margin: 0;
       padding: 0;
+      overflow: hidden;
     }
 
     .ad-container {
@@ -16,7 +17,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background-color: rgba(0,0,0,0.8);
+      background-color: rgba(0,0,0,0.85);
       display: flex;
       justify-content: center;
       align-items: center;
@@ -26,7 +27,7 @@
     .ad-content {
       position: relative;
       background: #000;
-      padding: 10px;
+      padding: 0;
       border-radius: 10px;
     }
 
@@ -34,81 +35,107 @@
       width: 100%;
       height: auto;
       border-radius: 10px;
-      pointer-events: none; /* ป้องกันคลิกวิดีโอ */
-      user-select: none;
+      display: block;
     }
 
     .countdown {
       position: absolute;
       top: 10px;
-      right: 10px;
+      left: 10px;
       background: rgba(0,0,0,0.6);
       color: #fff;
-      padding: 5px 10px;
+      padding: 5px 12px;
       border-radius: 20px;
       font-weight: bold;
       font-size: 16px;
+      pointer-events: none;
     }
 
-    .skip-btn {
-      margin-top: 15px;
-      padding: 10px 20px;
-      background-color: red;
-      color: #fff;
+    .close-btn {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      background-color: rgba(255, 255, 255, 0.2);
+      color: white;
       border: none;
-      border-radius: 5px;
-      font-size: 16px;
+      font-size: 22px;
+      padding: 4px 12px;
+      border-radius: 50%;
       cursor: pointer;
+      display: none; /* ซ่อนก่อน */
+    }
+
+    .mute-btn {
+      position: absolute;
+      bottom: 10px;
+      left: 10px;
+      background: rgba(0,0,0,0.5);
+      color: white;
+      border: none;
+      border-radius: 20px;
+      padding: 5px 12px;
+      cursor: pointer;
+      font-size: 14px;
     }
 
     /* ป้องกันคลิกขวา */
     body {
-      -webkit-touch-callout: none;
       -webkit-user-select: none;
-      -khtml-user-select: none;
-      -moz-user-select: none;
-      -ms-user-select: none;
       user-select: none;
     }
   </style>
 </head>
-<body oncontextmenu="return false;"> <!-- ป้องกันคลิกขวา -->
+<body oncontextmenu="return false;">
 
   <div class="ad-container" id="adContainer">
     <div class="ad-content">
-      <div class="countdown" id="countdown">ข้ามใน 5 วินาที</div>
-      
-      <video id="adVideo" autoplay muted playsinline>
+      <div class="countdown" id="countdown">เหลือ 0 วินาที</div>
+      <button class="close-btn" id="closeBtn" onclick="closeAd()">×</button>
+      <button class="mute-btn" id="muteBtn" onclick="toggleMute()">เปิดเสียง</button>
+
+      <video id="adVideo" autoplay playsinline>
         <source src="your-ad-video.mp4.mp4" type="video/mp4">
-        โฆษณาของคุณไม่สามารถเล่นได้
+        ไม่สามารถแสดงวิดีโอได้
       </video>
-      
-      <div style="text-align: center;">
-        <button class="skip-btn" id="skipBtn" onclick="closeAd()" disabled>ข้ามโฆษณา</button>
-      </div>
     </div>
   </div>
 
   <script>
-    let timeLeft = 5;
-    const countdown = document.getElementById('countdown');
-    const skipBtn = document.getElementById('skipBtn');
+    const video = document.getElementById('adVideo');
+    const countdownEl = document.getElementById('countdown');
+    const closeBtn = document.getElementById('closeBtn');
+    const muteBtn = document.getElementById('muteBtn');
 
-    const timer = setInterval(() => {
-      timeLeft--;
-      if (timeLeft > 0) {
-        countdown.textContent = 'ข้ามใน ' + timeLeft + ' วินาที';
-      } else {
-        clearInterval(timer);
-        countdown.style.display = 'none';
-        skipBtn.disabled = false;
-        skipBtn.textContent = 'ข้ามโฆษณา';
-      }
-    }, 1000);
+    // เริ่มแบบปิดเสียง
+    video.muted = true;
+    muteBtn.textContent = "เปิดเสียง";
+
+    function toggleMute() {
+      video.muted = !video.muted;
+      muteBtn.textContent = video.muted ? "เปิดเสียง" : "ปิดเสียง";
+    }
 
     function closeAd() {
       document.getElementById('adContainer').style.display = 'none';
     }
+
+    // นับถอยหลังตามความยาววิดีโอ
+    video.addEventListener('loadedmetadata', () => {
+      const duration = Math.floor(video.duration);
+      let timeLeft = duration;
+
+      const countdownInterval = setInterval(() => {
+        if (timeLeft > 0) {
+          countdownEl.textContent = `เหลือ ${timeLeft} วินาที`;
+          timeLeft--;
+        } else {
+          clearInterval(countdownInterval);
+          countdownEl.style.display = 'none';
+          closeBtn.style.display = 'block'; // แสดงปุ่ม ×
+        }
+      }, 1000);
+    });
   </script>
+
 </body>
 </html>
