--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
     .ad-content {
       position: relative;
       background: #000;
-      padding: 0;
       border-radius: 10px;
     }
 
@@ -62,23 +61,24 @@
       padding: 4px 12px;
       border-radius: 50%;
       cursor: pointer;
-      display: none; /* ซ่อนก่อน */
+      display: none;
     }
 
     .mute-btn {
       position: absolute;
       bottom: 10px;
       left: 10px;
-      background: rgba(0,0,0,0.5);
-      color: white;
+      background: transparent;
       border: none;
-      border-radius: 20px;
-      padding: 5px 12px;
       cursor: pointer;
-      font-size: 14px;
     }
 
-    /* ป้องกันคลิกขวา */
+    .mute-btn svg {
+      width: 30px;
+      height: 30px;
+      fill: white;
+    }
+
     body {
       -webkit-user-select: none;
       user-select: none;
@@ -91,12 +91,18 @@
     <div class="ad-content">
       <div class="countdown" id="countdown">เหลือ 0 วินาที</div>
       <button class="close-btn" id="closeBtn" onclick="closeAd()">×</button>
-      <button class="mute-btn" id="muteBtn" onclick="toggleMute()">เปิดเสียง</button>
 
       <video id="adVideo" autoplay playsinline>
         <source src="your-ad-video.mp4.mp4" type="video/mp4">
         ไม่สามารถแสดงวิดีโอได้
       </video>
+
+      <button class="mute-btn" id="muteBtn" onclick="toggleMute()">
+        <!-- Default: muted icon -->
+        <svg id="iconVolume" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+          <path d="M16.5 12c0-1.77-1-3.29-2.5-4.03v8.06c1.5-.74 2.5-2.26 2.5-4.03zM5 9v6h4l5 5V4l-5 5H5z" />
+        </svg>
+      </button>
     </div>
   </div>
 
@@ -105,14 +111,21 @@
     const countdownEl = document.getElementById('countdown');
     const closeBtn = document.getElementById('closeBtn');
     const muteBtn = document.getElementById('muteBtn');
+    const iconVolume = document.getElementById('iconVolume');
 
     // เริ่มแบบปิดเสียง
     video.muted = true;
-    muteBtn.textContent = "เปิดเสียง";
+    updateIcon();
 
     function toggleMute() {
       video.muted = !video.muted;
-      muteBtn.textContent = video.muted ? "เปิดเสียง" : "ปิดเสียง";
+      updateIcon();
+    }
+
+    function updateIcon() {
+      iconVolume.innerHTML = video.muted
+        ? `<path d="M16.5 12c0-1.77-1-3.29-2.5-4.03v8.06c1.5-.74 2.5-2.26 2.5-4.03zM5 9v6h4l5 5V4l-5 5H5z" />` // ลำโพงปิด
+        : `<path d="M3 9v6h4l5 5V4L7 9H3zm13.59 3l2.3-2.29a1 1 0 10-1.41-1.42L15 10.59l-2.29-2.3a1 1 0 00-1.42 1.42L13.59 12l-2.3 2.29a1 1 0 101.42 1.42L15 13.41l2.29 2.3a1 1 0 001.42-1.42L16.41 12z"/>`; // ลำโพงเปิด
     }
 
     function closeAd() {
@@ -131,7 +144,7 @@
         } else {
           clearInterval(countdownInterval);
           countdownEl.style.display = 'none';
-          closeBtn.style.display = 'block'; // แสดงปุ่ม ×
+          closeBtn.style.display = 'block';
         }
       }, 1000);
     });
