--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@
 <script>
   // รายชื่อโฆษณา + ลิงก์
   const ads = [
-    { video: "gzone-ad.mp1", link: "https://example.com/ad1" },
-    { video: "gzone-ad.mp2", link: "https://example.com/ad2" },
-    { video: "gzone-ad.mp3", link: "https://example.com/ad3" }
+    { video: "gzone-ad.mp1.mp4", link: "https://example.com/ad1" },
+    { video: "gzone-ad.mp2.mp4", link: "https://example.com/ad2" },
+    { video: "gzone-ad.mp3.mp4", link: "https://example.com/ad3" }
   ];
 
   // สุ่มโฆษณา
