--- a/index.html
+++ b/index.html
@@ -1,208 +1,155 @@
-<!DOCTYPE html>
-<html lang="th">
+<!DOCTYPE html><html lang="th">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>โฆษณา GZone</title>
   <style>
     * { box-sizing: border-box; }
     body {
       margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #111;
-      overflow: hidden;
-      user-select: none;
+      background: #000;
+      font-family: sans-serif;
     }
     .ad-container {
       position: fixed;
       top: 0; left: 0;
       width: 100vw; height: 100vh;
-      background-color: rgba(0, 0, 0, 0.9);
+      background: rgba(0,0,0,0.95);
       display: flex;
       justify-content: center;
       align-items: center;
       z-index: 9999;
     }
-    .ad-content {
+    .ad-box {
       position: relative;
-      max-width: 90%;
-      max-height: 90%;
+      width: 100%;
+      max-width: 600px;
+      aspect-ratio: 16 / 9;
       border-radius: 12px;
       overflow: hidden;
-      box-shadow: 0 0 20px rgba(255, 255, 255, 0.1);
-    }
-    .video-wrapper {
-      position: relative;
-      cursor: pointer;
     }
     video {
-      display: block;
-      width: 100%;
-      height: auto;
+      width: 100%; height: 100%;
+      object-fit: cover;
+      pointer-events: none;
     }
-    .countdown {
+    .controls {
       position: absolute;
       top: 10px;
       left: 10px;
-      background: rgba(0, 0, 0, 0.6);
-      color: white;
-      padding: 4px 12px;
+      display: flex;
+      gap: 10px;
+    }
+    .mute-btn, .skip-btn {
+      background: rgba(255,255,255,0.2);
+      border: none;
+      color: #fff;
+      padding: 8px 12px;
       border-radius: 20px;
+      cursor: pointer;
       font-size: 14px;
     }
-    .close-btn {
+    .skip-btn {
       position: absolute;
       top: 10px;
       right: 10px;
-      background: transparent;
-      border: none;
-      font-size: 22px;
+    }
+    .countdown {
+      position: absolute;
+      bottom: 10px;
+      left: 10px;
+      background: rgba(0,0,0,0.5);
       color: white;
-      cursor: pointer;
-      display: none;
+      padding: 4px 10px;
+      border-radius: 12px;
+      font-size: 13px;
     }
     .popup {
       position: absolute;
       bottom: 0;
       left: 0;
       width: 100%;
-      background: rgba(0, 0, 0, 0.8);
-      padding: 16px;
-      text-align: center;
+      background: rgba(0,0,0,0.85);
+      color: #fff;
       display: none;
       flex-direction: column;
-      gap: 10px;
+      align-items: center;
+      padding: 16px;
     }
     .popup button {
-      background: white;
-      color: #111;
+      background: #fff;
+      color: #000;
+      padding: 8px 20px;
+      margin: 6px;
       border: none;
-      padding: 10px 20px;
-      border-radius: 25px;
+      border-radius: 20px;
+      cursor: pointer;
       font-size: 14px;
-      cursor: pointer;
-      transition: background 0.3s;
-    }
-    .popup button:hover {
-      background: #ddd;
-    }
-    .mute-btn {
-      position: absolute;
-      bottom: 10px;
-      left: 10px;
-      background: rgba(255, 255, 255, 0.2);
-      border: none;
-      border-radius: 50%;
-      padding: 8px;
-      cursor: pointer;
-    }
-    .mute-btn svg {
-      width: 22px;
-      height: 22px;
-      fill: white;
     }
   </style>
 </head>
-<body oncontextmenu="return false;">
-
-<div class="ad-container" id="adContainer">
-  <div class="ad-content">
-    <div class="video-wrapper" onclick="openAdLink()">
-      <video id="adVideo" playsinline muted>
-        <source id="videoSource" src="" type="video/mp4">
-        ไม่สามารถเล่นวิดีโอได้
-      </video>
-
-      <div class="countdown" id="countdown">เหลือ 0 วินาที</div>
-      <button class="close-btn" id="closeBtn" onclick="closeAd()">×</button>
-      <button class="mute-btn" onclick="toggleMute()">
-        <svg id="volumeIcon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-          <path d="M16.5 12c0-1.77-1-3.29-2.5-4.03v8.06c1.5-.74 2.5-2.26 2.5-4.03zM5 9v6h4l5 5V4l-5 5H5z" />
-        </svg>
-      </button>
+<body oncontextmenu="return false">
+  <div class="ad-container" id="adContainer">
+    <div class="ad-box">
+      <video id="adVideo" autoplay playsinline></video>
+      <div class="controls">
+        <button class="mute-btn" onclick="toggleMute()" id="muteBtn">ปิดเสียง</button>
+      </div>
+      <button class="skip-btn" onclick="closeAd()">&times;</button>
+      <div class="countdown" id="countdown">0</div>
+      <div class="popup" id="popup">
+        <button onclick="replayAd()">ดูซ้ำ</button>
+        <button onclick="window.open(currentAd.link)">ดูข้อมูลเพิ่มเติม</button>
+      </div>
     </div>
+  </div>  <script>
+    const ads = [
+      { video: 'gzone-ad1.mp4', link: 'https://example.com/1' },
+      { video: 'gzone-ad2.mp4', link: 'https://example.com/2' },
+      { video: 'gzone-ad3.mp4', link: 'https://example.com/3' },
+    ];
+    const currentAd = ads[Math.floor(Math.random() * ads.length)];
 
-    <div class="popup" id="popup">
-      <button onclick="replayAd()">ดูซ้ำ</button>
-      <button onclick="openAdLink()">ดูข้อมูลเพิ่มเติม</button>
-    </div>
-  </div>
-</div>
+    const video = document.getElementById('adVideo');
+    const countdown = document.getElementById('countdown');
+    const popup = document.getElementById('popup');
+    const muteBtn = document.getElementById('muteBtn');
 
-<script>
-  // รายชื่อโฆษณา + ลิงก์
-  const ads = [
-    { video: "gzone-ad.mp1.mp4", link: "https://example.com/ad1" },
-    { video: "gzone-ad.mp2.mp4", link: "https://example.com/ad2" },
-    { video: "gzone-ad.mp3.mp4", link: "https://example.com/ad3" }
-  ];
+    video.src = currentAd.video;
+    video.muted = false;
+    let timer;
 
-  // สุ่มโฆษณา
-  const selectedAd = ads[Math.floor(Math.random() * ads.length)];
-  const video = document.getElementById('adVideo');
-  const videoSource = document.getElementById('videoSource');
-  const countdown = document.getElementById('countdown');
-  const closeBtn = document.getElementById('closeBtn');
-  const popup = document.getElementById('popup');
-  const volumeIcon = document.getElementById('volumeIcon');
+    video.addEventListener('loadedmetadata', () => {
+      let duration = Math.floor(video.duration);
+      countdown.textContent = `เหลือ ${duration} วินาที`;
+      timer = setInterval(() => {
+        duration--;
+        if (duration <= 0) {
+          clearInterval(timer);
+          countdown.style.display = 'none';
+        } else {
+          countdown.textContent = `เหลือ ${duration} วินาที`;
+        }
+      }, 1000);
+    });
 
-  videoSource.src = selectedAd.video;
-  video.load();
+    video.addEventListener('ended', () => {
+      popup.style.display = 'flex';
+    });
 
-  document.body.addEventListener('click', function initAudio() {
-    video.play().then(() => {
-      video.muted = false;
-      updateVolumeIcon();
-    }).catch(e => console.log(e));
-    document.body.removeEventListener('click', initAudio);
-  });
+    function toggleMute() {
+      video.muted = !video.muted;
+      muteBtn.textContent = video.muted ? 'เปิดเสียง' : 'ปิดเสียง';
+    }
 
-  video.addEventListener('loadedmetadata', () => {
-    let duration = Math.floor(video.duration);
-    let remaining = duration;
+    function replayAd() {
+      popup.style.display = 'none';
+      video.currentTime = 0;
+      video.play();
+    }
 
-    const timer = setInterval(() => {
-      if (remaining > 0) {
-        countdown.textContent = `เหลือ ${remaining} วินาที`;
-        remaining--;
-      } else {
-        clearInterval(timer);
-        countdown.style.display = 'none';
-        closeBtn.style.display = 'block';
-      }
-    }, 1000);
-  });
-
-  video.addEventListener('ended', () => {
-    popup.style.display = 'flex';
-    closeBtn.style.display = 'block';
-  });
-
-  function closeAd() {
-    document.getElementById('adContainer').style.display = 'none';
-  }
-
-  function replayAd() {
-    popup.style.display = 'none';
-    video.currentTime = 0;
-    video.play();
-  }
-
-  function openAdLink() {
-    window.open(selectedAd.link, '_blank');
-  }
-
-  function toggleMute() {
-    video.muted = !video.muted;
-    updateVolumeIcon();
-  }
-
-  function updateVolumeIcon() {
-    volumeIcon.innerHTML = video.muted
-      ? '<path d="M3 9v6h4l5 5V4L7 9H3zm13.59 3l2.3-2.29a1 1 0 10-1.41-1.42L15 10.59l-2.29-2.3a1 1 0 00-1.42 1.42L13.59 12l-2.3 2.29a1 1 0 101.42 1.42L15 13.41l2.29 2.3a1 1 0 001.42-1.42L16.41 12z"/>'
-      : '<path d="M16.5 12c0-1.77-1-3.29-2.5-4.03v8.06c1.5-.74 2.5-2.26 2.5-4.03zM5 9v6h4l5 5V4l-5 5H5z" />';
-  }
-</script>
-
-</body>
+    function closeAd() {
+      document.getElementById('adContainer').style.display = 'none';
+    }
+  </script></body>
 </html>
