--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       margin: 0;
       background: #000;
       font-family: sans-serif;
+      overflow: hidden;
     }
     .ad-container {
       position: fixed;
@@ -22,15 +23,18 @@
     }
     .ad-box {
       position: relative;
-      width: 100%;
-      max-width: 100%;
-      height: 100vh;
+      width: 90vw;
+      max-width: 800px;
+      height: 50vh;
       overflow: hidden;
+      border-radius: 16px;
+      box-shadow: 0 0 20px rgba(0,0,0,0.4);
     }
     video {
       width: 100%; height: 100%;
       object-fit: cover;
       pointer-events: none;
+      border-radius: 16px;
     }
     .controls {
       position: absolute;
@@ -56,10 +60,10 @@
       background: rgba(0, 0, 0, 0.6);
       border: none;
       color: #fff;
-      padding: 6px 14px;
-      border-radius: 20px;
+      padding: 6px 12px;
+      border-radius: 50%;
       cursor: not-allowed;
-      font-size: 14px;
+      font-size: 20px;
       z-index: 2;
     }
     .skip-btn.enabled {
@@ -102,7 +106,7 @@
   </style>
   <script src="https://unpkg.com/lucide@latest"></script>
 </head>
-<body oncontextmenu="return false">
+<body oncontextmenu="return false" onkeydown="return false" onkeyup="return false">
   <div class="ad-container" id="adContainer">
     <div class="ad-box" onclick="window.open(currentAd.link)">
       <video id="adVideo" autoplay playsinline></video>
@@ -111,7 +115,7 @@
           <i data-lucide="volume-2" id="muteIcon"></i>
         </button>
       </div>
-      <button class="skip-btn" id="skipBtn" onclick="trySkip()">ข้าม</button>
+      <button class="skip-btn" id="skipBtn" onclick="trySkip()">×</button>
       <div class="countdown" id="countdown">0</div>
       <div class="popup" id="popup">
         <button onclick="replayAd()">ดูซ้ำ</button>
@@ -142,7 +146,6 @@
       let duration = Math.floor(video.duration);
       countdown.textContent = `เหลือ ${duration} วินาที`;
 
-      let skipAfter = 5; // กดข้ามได้หลัง 5 วินาที
       timer = setInterval(() => {
         duration--;
         if (duration <= 0) {
@@ -151,17 +154,14 @@
         } else {
           countdown.textContent = `เหลือ ${duration} วินาที`;
         }
-
-        if (video.currentTime >= skipAfter && !skipBtn.classList.contains('enabled')) {
-          skipBtn.classList.add('enabled');
-          skipBtn.style.cursor = 'pointer';
-          skipBtn.disabled = false;
-        }
       }, 1000);
     });
 
     video.addEventListener('ended', () => {
       popup.style.display = 'flex';
+      skipBtn.classList.add('enabled');
+      skipBtn.style.cursor = 'pointer';
+      skipBtn.disabled = false;
     });
 
     function toggleMute() {
