--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
-<!DOCTYPE html>
-<html lang="th">
+<!DOCTYPE html><html lang="th">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>โฆษณา</title>
+  <title>โฆษณาวิดีโอ</title>
   <style>
     body {
       margin: 0;
@@ -13,176 +12,76 @@
     }
     .ad-container {
       position: relative;
-      width: 100vw;
-      height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      background: #000;
+      max-width: 720px;
+      margin: auto;
+      top: 20px;
+      box-shadow: 0 0 15px rgba(0, 0, 0, 0.4);
     }
     video {
       width: 100%;
-      height: 100%;
-      object-fit: cover;
-      pointer-events: none;
+      height: auto;
+      display: block;
     }
-    .mute-btn {
+    .controls {
       position: absolute;
-      top: 16px;
-      left: 16px;
-      background: rgba(0, 0, 0, 0.6);
-      border: none;
-      border-radius: 50%;
-      width: 40px;
-      height: 40px;
+      top: 10px;
+      right: 10px;
       display: flex;
-      justify-content: center;
-      align-items: center;
-      cursor: pointer;
+      gap: 10px;
       z-index: 10;
     }
-    .mute-btn img {
-      width: 20px;
-      height: 20px;
-    }
-    .timer {
-      position: absolute;
-      top: 16px;
-      right: 16px;
+    .control-btn {
+      background: rgba(0,0,0,0.5);
       color: white;
-      background: rgba(0, 0, 0, 0.6);
-      padding: 6px 12px;
-      border-radius: 16px;
-      font-size: 14px;
+      border: none;
+      padding: 6px 10px;
+      border-radius: 5px;
+      font-size: 16px;
+      cursor: pointer;
     }
     .skip-btn {
-      position: absolute;
-      top: 16px;
-      right: 16px;
-      background: rgba(0, 0, 0, 0.6);
-      color: white;
-      border: none;
-      font-size: 20px;
-      padding: 4px 10px;
-      border-radius: 50%;
-      cursor: pointer;
       display: none;
-      z-index: 10;
-    }
-    .popup {
-      position: absolute;
-      bottom: 40px;
-      left: 50%;
-      transform: translateX(-50%);
-      background: white;
-      padding: 20px;
-      border-radius: 12px;
-      text-align: center;
-      display: none;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.3);
-    }
-    .popup button {
-      margin: 5px;
-      padding: 8px 16px;
-      border: none;
-      border-radius: 8px;
-      font-size: 14px;
-      cursor: pointer;
-    }
-    .popup .replay {
-      background-color: #eee;
-    }
-    .popup .info {
-      background-color: #007BFF;
-      color: white;
-    }
-    .ad-label {
-      position: absolute;
-      bottom: 8px;
-      left: 8px;
-      color: white;
-      font-size: 12px;
-      background: rgba(0,0,0,0.5);
-      padding: 2px 6px;
-      border-radius: 4px;
     }
   </style>
 </head>
 <body>
   <div class="ad-container">
     <video id="adVideo" autoplay muted playsinline>
-      <source src="gzone-ad1.mp4" type="video/mp4">
+      <source src="gzone-ad1.mp4" type="video/mp4" />
+      เบราว์เซอร์ของคุณไม่รองรับวิดีโอ
     </video>
-    <button class="mute-btn" id="muteBtn">
-      <img id="muteIcon" src="https://img.icons8.com/ios-filled/50/no-audio--v1.png" alt="mute" />
-    </button>
-    <div class="timer" id="countdown">0s</div>
-    <button class="skip-btn" id="skipBtn">×</button>
-    <div class="popup" id="popup">
-      <div style="margin-bottom: 10px;">ต้องการดำเนินการต่อหรือไม่?</div>
-      <button class="replay" onclick="replayAd()">ดูซ้ำ</button>
-      <button class="info" onclick="window.open('https://your-link.com', '_blank')">ดูข้อมูลเพิ่มเติม</button>
+    <div class="controls">
+      <button id="muteBtn" class="control-btn">🔇</button>
+      <button id="skipBtn" class="control-btn skip-btn">×</button>
     </div>
-    <div class="ad-label">โฆษณา</div>
-  </div>
-  <script>
+  </div>  <script>
     const video = document.getElementById('adVideo');
     const muteBtn = document.getElementById('muteBtn');
-    const muteIcon = document.getElementById('muteIcon');
-    const countdown = document.getElementById('countdown');
     const skipBtn = document.getElementById('skipBtn');
-    const popup = document.getElementById('popup');
 
-    // เริ่มเปิดเสียงทันที
+    // เปิดเสียงทันทีเมื่อเริ่ม
     video.muted = false;
-    muteIcon.src = 'https://img.icons8.com/ios-filled/50/high-volume--v1.png';
+    video.volume = 1.0;
 
-    muteBtn.onclick = () => {
+    // ควบคุมปิด/เปิดเสียง
+    muteBtn.addEventListener('click', () => {
       video.muted = !video.muted;
-      muteIcon.src = video.muted
-        ? 'https://img.icons8.com/ios-filled/50/no-audio--v1.png'
-        : 'https://img.icons8.com/ios-filled/50/high-volume--v1.png';
-    };
-
-    // ห้ามกดค้างเพื่อบันทึกวิดีโอ
-    video.oncontextmenu = (e) => e.preventDefault();
-
-    // คลิกไปยังลิงก์
-    video.onclick = () => {
-      window.open('https://vt.tiktok.com/ZSrb3vvCP/', '_blank');
-    };
-
-    // จัดการนับถอยหลัง & ปุ่มข้าม
-    let interval;
-    video.addEventListener('loadedmetadata', () => {
-      let duration = Math.floor(video.duration);
-      countdown.innerText = duration + 's';
-      interval = setInterval(() => {
-        duration--;
-        countdown.innerText = duration + 's';
-        if (duration <= 0) {
-          clearInterval(interval);
-          countdown.style.display = 'none';
-          skipBtn.style.display = 'block';
-          popup.style.display = 'block';
-        }
-      }, 1000);
+      muteBtn.textContent = video.muted ? '🔇' : '🔊';
     });
 
-    // ปิดข้ามโดยไม่ไปลิงก์
-    skipBtn.onclick = (e) => {
-      e.stopPropagation();
-      popup.style.display = 'block';
-    };
+    // แสดงปุ่มข้ามเมื่อวิดีโอใกล้จบ (1 วิสุดท้าย)
+    video.addEventListener('timeupdate', () => {
+      if (video.duration - video.currentTime <= 1) {
+        skipBtn.style.display = 'inline';
+      }
+    });
 
-    // ดูซ้ำ
-    function replayAd() {
-      video.currentTime = 0;
-      video.play();
-      popup.style.display = 'none';
-      skipBtn.style.display = 'none';
-      countdown.style.display = 'block';
-    }
-  </script>
-</body>
+    // ปุ่มข้ามโฆษณา
+    skipBtn.addEventListener('click', () => {
+      window.location.href = "#"; // ปรับ URL เป้าหมายได้ที่นี่
+    });
+
+    // ป้องกันคลิกขวา (กันดาวน์โหลดวิดีโอ)
+    document.addEventListener('contextmenu', event => event.preventDefault());
+  </script></body>
 </html>
